basic frontend working

--- a/views/index.html
+++ b/views/index.html
@@ -26,6 +26,13 @@
 					>
 				</div>
 			</div>
+			<div
+				id="main"
+				class="flex justify-center m-9"
+				hx-get="/main"
+				hx-target="#main"
+				hx-trigger="load"
+			></div>
 		</main>
 	</body>
 </html>
