added footer with disclaimer

--- a/views/index.html
+++ b/views/index.html
@@ -33,6 +33,31 @@
 				hx-target="#main"
 				hx-trigger="load"
 			></div>
+			<footer
+				class="footer footer-center p-4 bg-base-300 text-base-content"
+			>
+				<aside>
+					<p>
+						Disclaimer:
+						<br />
+						Die dargestellten Daten gehören dem
+						<a
+							href="https://www.hydrodaten.admin.ch/de/seen-und-fluesse/messstationen-temperatur"
+							style="text-decoration: underline"
+							>BAFU</a
+						>
+						und
+						<a
+							href="https://www.boot24.ch/chde/service/temperaturen/"
+							style="text-decoration: underline"
+							>boot24</a
+						>.
+						<br />
+						Diese Website dient lediglich zu schulischen Zwecken und
+						es wird kein Profit erzeugt.
+					</p>
+				</aside>
+			</footer>
 		</main>
 	</body>
 </html>
