--- a/views/index.html
+++ b/views/index.html
@@ -20,19 +20,21 @@
 				<div class="flex-1">
 					<a
 						class="btn btn-ghost text-xl"
-						hx-get="/home"
-						hx-target="#container"
+						hx-get="/temperatures"
+						hx-target="#temperatures"
 						>SwissWaterTemps</a
 					>
 				</div>
 			</div>
-			<div
-				id="main"
-				class="flex justify-center m-9"
-				hx-get="/main"
-				hx-target="#main"
-				hx-trigger="load"
-			></div>
+			<div class="flex justify-center m-9">
+				<div
+					id="temperatures"
+					hx-get="/temperatures"
+					hx-target="#temperatures"
+					hx-trigger="load"
+				></div>
+			</div>
+
 			<footer
 				class="footer footer-center p-4 bg-base-300 text-base-content"
 			>
