--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,18 @@
 					>
 				</div>
 			</div>
-			<div class="flex justify-center m-9">
+			<div class="flex flex-col justify-center m-9">
+				<input
+					type="text"
+					id="searchInput"
+					name="search"
+					class="input input-bordered input-primary w-full mb-4"
+					placeholder="See oder Fluss suchen..."
+					hx-get="/temperatures"
+					hx-target="#temperatures"
+					hx-trigger="keyup"
+					hx-params="search"
+				/>
 				<div
 					id="temperatures"
 					hx-get="/temperatures"
@@ -34,7 +45,6 @@
 					hx-trigger="load"
 				></div>
 			</div>
-
 			<footer
 				class="footer footer-center p-4 bg-base-300 text-base-content"
 			>
