added headings to tables

--- a/views/temperatures.html
+++ b/views/temperatures.html
@@ -1,4 +1,5 @@
 <div class="flex flex-col w-full border-opacity-50">
+	<div class="text-xl font-bold mb-4">Seen</div>
 	<table class="table">
 		<thead>
 			<tr>
@@ -16,6 +17,7 @@
 		</tbody>
 	</table>
 	<div class="divider"></div>
+	<div class="text-xl font-bold mb-4">Flüsse</div>
 	<table class="table">
 		<thead>
 			<tr>
