--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,11 @@
 <html data-theme="aqua">
 	<head>
 		<title>SwissWaterTemps</title>
+		<link
+			rel="icon"
+			href="assets/favicon.ico"
+			type="image/x-icon"
+		/>
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
